--- a/Figures.Rmd
+++ b/Figures.Rmd
@@ -58,82 +58,9 @@ par(oldpar)
 cat("\\clearpage")
 ```
 
-```{r fig-cartoon, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:cartoon")), message=FALSE, warning=FALSE}
+```{r fig-cartoon, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:cartoon")), message=FALSE, warning=FALSE, eval=FALSE}
 figfile = system.file("docs", "cartoon.png", package="SardineForecast")
 knitr::include_graphics(figfile)
-```
-
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
-```
-
-```{r cov.mon, echo=FALSE,fig.cap=paste("Figure",  ref("fig:COVts")), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
-### FIGURE covariates
-oldpar=par(mfrow=c(2,2), mar=c(2,5,2,0))
-i=4
-covname=paste("SST.UPW.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datts=ts(dat,start=1956, frequency=12)
-plot(datts,ylab="SST-derived Upwelling Index", xlab="",bty="n",ylim=c(-1,5),xlim=c(1980,2020))
-legend("topright","A", bty="n")
-
-covname=paste("CHL.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datts=ts(dat,start=1956, frequency=12)
-plot(datts,ylab="Surface Chlorophyll-a", xlab="",bty="n",ylim=c(0,35),xlim=c(1980,2020))
-legend("topright","B", bty="n")
-
-covname=paste("SST.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datts=ts(dat,start=1956, frequency=12)
-plot(datts,ylab="Sea surface temperature (deg C)", xlab="",bty="n",ylim=c(24,35),xlim=c(1980,2020))
-legend("topright","C", bty="n")
-
-covname="precip.gpcp.kerala"
-dat=seio_covariates_mon[[covname]]
-datts=ts(dat,start=1956, frequency=12)
-plot(datts,ylab="Average daily precipitation (mm)", xlab="",bty="n",ylim=c(0,18),xlim=c(1980,2020))
-legend("topright","D", bty="n")
-
-par(fig = c(0.05, .25, 0.8, 1), new = T)  #panel left-top
-covname=paste("SST.UPW.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datmon=seio_covariates_mon$Month
-catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
-names(catchmeans)=1:12
-barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,1.5), col="grey", xaxt="n")
-title("Mthly Mean",cex.main=.75)
-
-par(fig = c(0.05+.5, .25+.5, 0.8, 1), new = T)  # panel right-top
-covname=paste("CHL.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datmon=seio_covariates_mon$Month
-catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
-names(catchmeans)=1:12
-barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,12),col="grey", names.arg="")
-title("Mthly Mean",cex.main=.75)
-
-par(fig = c(0.05, .25, 0.8-.5, 1-.5), new = T)  #left-bottom
-covname=paste("SST.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datmon=seio_covariates_mon$Month
-catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
-names(catchmeans)=1:12
-barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(25,30),col="grey", xpd=FALSE, bty="l", names.arg="")
-axis(1, labels=FALSE, lwd.ticks=-1)
-title("Mthly Mean",cex.main=.75)
-
-par(fig = c(0.05+.5, .25+.5, 0.8-.5, 1-.5), new = T)  #right-bottom
-covname="precip.gpcp.kerala"
-dat=seio_covariates_mon[[covname]]
-datmon=seio_covariates_mon$Month
-catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
-names(catchmeans)=1:12
-barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,10),col="grey", names.arg="")
-title("Mthly Mean",cex.main=.75)
-
-par(oldpar)
-
 ```
 
 ```{r, results="asis", echo=FALSE}
@@ -216,6 +143,79 @@ for(start in yrs){
 }
 ```
 
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+
+```{r cov.mon, echo=FALSE,fig.cap=paste("Figure",  ref("fig:COVts")), fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+### FIGURE covariates
+oldpar=par(mfrow=c(2,2), mar=c(2,5,2,0))
+i=4
+covname=paste("SST.UPW.",i,sep="")
+dat=seio_covariates_mon[[covname]]
+datts=ts(dat,start=1956, frequency=12)
+plot(datts,ylab="SST-derived Upwelling Index", xlab="",bty="n",ylim=c(-1,5),xlim=c(1980,2020))
+legend("topright","A", bty="n")
+
+covname=paste("CHL.",i,sep="")
+dat=seio_covariates_mon[[covname]]
+datts=ts(dat,start=1956, frequency=12)
+plot(datts,ylab="Surface Chlorophyll-a", xlab="",bty="n",ylim=c(0,35),xlim=c(1980,2020))
+legend("topright","B", bty="n")
+
+covname=paste("SST.",i,sep="")
+dat=seio_covariates_mon[[covname]]
+datts=ts(dat,start=1956, frequency=12)
+plot(datts,ylab="Sea surface temperature (deg C)", xlab="",bty="n",ylim=c(24,35),xlim=c(1980,2020))
+legend("topright","C", bty="n")
+
+covname="precip.gpcp.kerala"
+dat=seio_covariates_mon[[covname]]
+datts=ts(dat,start=1956, frequency=12)
+plot(datts,ylab="Average daily precipitation (mm)", xlab="",bty="n",ylim=c(0,18),xlim=c(1980,2020))
+legend("topright","D", bty="n")
+
+par(fig = c(0.05, .25, 0.8, 1), new = T)  #panel left-top
+covname=paste("SST.UPW.",i,sep="")
+dat=seio_covariates_mon[[covname]]
+datmon=seio_covariates_mon$Month
+catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
+names(catchmeans)=1:12
+barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,1.5), col="grey", xaxt="n")
+title("Mthly Mean",cex.main=.75)
+
+par(fig = c(0.05+.5, .25+.5, 0.8, 1), new = T)  # panel right-top
+covname=paste("CHL.",i,sep="")
+dat=seio_covariates_mon[[covname]]
+datmon=seio_covariates_mon$Month
+catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
+names(catchmeans)=1:12
+barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,12),col="grey", names.arg="")
+title("Mthly Mean",cex.main=.75)
+
+par(fig = c(0.05, .25, 0.8-.5, 1-.5), new = T)  #left-bottom
+covname=paste("SST.",i,sep="")
+dat=seio_covariates_mon[[covname]]
+datmon=seio_covariates_mon$Month
+catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
+names(catchmeans)=1:12
+barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(25,30),col="grey", xpd=FALSE, bty="l", names.arg="")
+axis(1, labels=FALSE, lwd.ticks=-1)
+title("Mthly Mean",cex.main=.75)
+
+par(fig = c(0.05+.5, .25+.5, 0.8-.5, 1-.5), new = T)  #right-bottom
+covname="precip.gpcp.kerala"
+dat=seio_covariates_mon[[covname]]
+datmon=seio_covariates_mon$Month
+catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
+names(catchmeans)=1:12
+barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,10),col="grey", names.arg="")
+title("Mthly Mean",cex.main=.75)
+
+par(oldpar)
+
+```
 
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
