--- a/Table App A spawner model.Rmd
+++ b/Table App A spawner model.Rmd
@@ -559,7 +559,7 @@ mod <- FittedLooPred1984$Fitted[["dlm(Jul-Sep(t-1))"]]
 modloo <- FittedLooPred1984$LooPred[["dlm(Jul-Sep(t-1))"]]
 err <- mod$model$data[1,]-modloo$pred
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha$ + $\\beta_t ln(S_{t-1})$ + $\\epsilon_t$", 
+  Model="3a. $ln(S_t)$ = $\\alpha$ + $\\beta_t ln(S_{t-1})$ + $\\epsilon_t$", 
   Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
@@ -573,7 +573,7 @@ mod <- FittedLooPred1984$Fitted[["dlm(Oct-Mar(t-1))"]]
 modloo <- FittedLooPred1984$LooPred[["dlm(Oct-Mar(t-1))"]]
 err <- mod$model$data[1,]-modloo$pred
 tmp1=data.frame(
-  Model="3. $ln(S_t)$ = $\\alpha$ + $\\beta_t ln(N_{t-1})$ + $\\epsilon_t$", 
+  Model="3b. $ln(S_t)$ = $\\alpha$ + $\\beta_t ln(N_{t-1})$ + $\\epsilon_t$", 
   Residual.df=mod$samp.size-attr(MARSS:::logLik.marssMLE(mod), "df"), 
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
