--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -51,14 +51,6 @@ cat("\\clearpage")
 cat("\\clearpage")
 ```
 
-
-<!-- ```{r child = 'Table App B nonspawner covariates M wo S2.Rmd'} -->
-<!-- ``` -->
-
-<!-- ```{r, results="asis", echo=FALSE} -->
-<!-- cat("\\clearpage") -->
-<!-- ``` -->
-
 # Appendix C: Tests for Chlorophyll-a as a covariate
 
 ```{r child = 'Table App C chlorophyll.Rmd'}
@@ -220,6 +212,7 @@ xlab="ocean precipitation")
 cat("\\clearpage")
 ```
 
+<!--
 # Appendix F: Chlorophyll-a images in 2016
 
 ```{r, results="asis", echo=FALSE}
@@ -227,7 +220,7 @@ cat("\\clearpage")
 ```
 
 
-```{r fig-chl-2016, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:CHL")), message=FALSE, warning=FALSE}
+```{r fig-chl-2016, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:CHL")), message=FALSE, warning=FALSE, eval=FALSE}
 figfile = system.file("docs", "2016 CHL.png", package="SardineForecast")
 knitr::include_graphics(figfile)
 ```
@@ -237,9 +230,20 @@ knitr::include_graphics(figfile)
 cat("\\clearpage")
 ```
 
-# Appendix G: Influential years tests
+-->
+
+# Appendix F: Influential years tests
 
 ```{r child = 'Table App D.Rmd'}
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+# Appendix G: Data Sources
+
+```{r child = 'Table App Data.Rmd'}
 ```
 
 ```{r, results="asis", echo=FALSE}
