--- a/Table App B nonspawner covariates M wo S2.Rmd
+++ b/Table App B nonspawner covariates M wo S2.Rmd
@@ -1,17 +1,19 @@
 ---
-title: "Post-Monsoon (Oct-May) Catch Covariates Analysis"
+title: "Non-Spawner (Oct-Mar Catch) Covariates Analysis"
 output:
   pdf_document: default
   word_document: default
 ---
 
 <!-- 
+header-includes: \usepackage[labelformat=empty]{caption}
+
 Generic setup code common across all Rmds; run code in setup.Rmd if not knitting.
 --> 
 ```{r child = 'setup.Rmd'}
 ```
 
-```{r table-appBM2-nspawner-dat, echo=FALSE}
+```{r table-appB-nspawner-datM2, echo=FALSE}
 #dat.nonspawners defined in setup.Rmd
 dat=dat.nonspawners
 Yr1 = min(dat$Year)
@@ -22,7 +24,7 @@ Yr2 = max(dat$Year)
 NE=mean(abs(dat$nspawners0-dat$nspawners1))
 ```
 
-```{r table-appBM2-nspawner-precip, echo=FALSE}
+```{r table-appB-nspawner-precipM2, echo=FALSE}
 #set up table
 seltable = data.frame(
   Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
@@ -40,9 +42,7 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2,m3, test="F")
 
 # header M1 for all models
 
@@ -76,9 +76,7 @@ dat$cov1=scale(dat[[paste(covname, "1", sep="")]])
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2,m3, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
@@ -101,30 +99,6 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
-  AIC = round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-#model 4
-i=4; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="4a. $ln(N_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1),
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
-  Adj.R2=100*round(aa$r.sq, digits=3),
-  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
-  AIC = round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-#model 5
-i=5; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="5a. $ln(N_t)$ = M + $s(V_t)$ + $s(V_{t-1})$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1),
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
-  Adj.R2=100*round(aa$r.sq, digits=3),
-  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
@@ -166,11 +140,11 @@ seltable=rbind(seltable,tmp1)
 seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
-```{r print-tableappBM2-precip, echo=FALSE}
+```{r print-tableAppB-precip-nspawnerM2, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch ($N_t$) during post-monsoon months (Oct-May) using", Yr1, "to", Yr2,  "data.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). In the Appendix C tables, the 2nd best model is used. This model is simpler than the best model (based on AIC) and uses only $N_{t-1}$. To the base model, covariates are added.  $V_t$ is the covariate in the calendar year, and $V_{t-1}$ is the covariate in the prior calendar year. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set. MASE is the mean absolute square error (residuals).")
+thecap=paste("Model selection tests of GPCP precipitation as an explanatory variable for the catch ($N_t$) during post-monsoon months (Oct-May) using", Yr1, "to", Yr2,  "data and the base model without $S_{t-2}$.  The data range is determined by the years for which SST was available in order to use a consistent dataset across covariate tests.  The base model (M) with prior catch dependency was selected independently (Appendix A). $N_{t-1}$ is the post-monsoon catch in prior season, and $S_{t-2}$ is the catch during Jul-Sep two seasons prior.  To the base model, covariates are added.  $V_t$ is the covariate in the calendar year, and $V_{t-1}$ is the covariate in the prior calendar year. The specific hypothesis (Table ", ref("tab:hypotheses"), ") being tested is noted in parentheses. The models are tested as nested sets.  Thus 1, 2a, 3a is a set and 1, 2b, 3b is another set.")
 fullcap=paste("Table ", ref("tabappB:nspawner-model-precipM2", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
 ```
@@ -180,7 +154,7 @@ cat("\\clearpage")
 ```
 
 
-```{r table-appBM2-spawner-sst, echo=FALSE}
+```{r table-appB-nspawner-sstM2, echo=FALSE}
 ########### SST TEST 
 #set up table
 seltable = data.frame(
@@ -199,9 +173,7 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2,m3, test="F")
 
 # header M1 for all models
 
@@ -245,9 +217,7 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2,m3, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
@@ -270,30 +240,6 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
-  AIC = round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-#model 4
-i=4; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="4a. $ln(N_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1),
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
-  Adj.R2=100*round(aa$r.sq, digits=3),
-  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
-  AIC = round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-#model 5
-i=5; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="5a. $ln(N_t)$ = M + $s(V_t)$ + $s(V_{t-1})$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1),
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
-  Adj.R2=100*round(aa$r.sq, digits=3),
-  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
@@ -373,71 +319,16 @@ seltable=rbind(seltable,tmp1)
 ## Add space
 tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
 seltable=rbind(seltable,tmp1)
+
 }
-# Remove space at top and bottom
-seltable=seltable[1:(dim(seltable)[1]-1),]
-```
-
-```{r print-tableappBM2-sst, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
-
-thecap=paste0("Model selection tests of average sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1) as the explanatory variable ($V_t$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. See Table ", ref("tabappB:nspawner-model-precipM2", pre="B"), " for an explanation of the models.")
-fullcap=paste("Table ", ref("tabappB:nspawner-model-sstM2", pre="B"), ". ", thecap, sep="")
-kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
-```
-
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
-```
-
-
-```{r table-appBM2-spawner-upw, echo=FALSE}
-## UPWELLING TEST
+for(covname in c("SST.UPW.4.mon6to9.", "SST.2.10.mon6to9.", "Bakun.UPW.mon6to9.")){
 #set up table
-seltable = data.frame(
-  Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
-  Residual.df="", 
-  MASE="",
-  Adj.R2="", 
-  F="", 
-  p.value="", 
-  AIC="", stringsAsFactors=FALSE)
-
-#set up the cov0 and cov1 variables
-covname="precip.gpcp.kerala.mon6to7."
-dat$cov0=dat[[paste(covname, "0", sep="")]]
-dat$cov1=dat[[paste(covname, "1", sep="")]]
-m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
-m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
-m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
-
-# header M1 for all models
-
-#model 1
-i=1; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="1. $ln(N_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
-  Adj.R2=100*round(aa$r.sq, digits=3), 
-  F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-## Add space
-tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
-seltable=rbind(seltable,tmp1)
-
-for(covname in c("SST.UPW.4.mon6to9.", "SST.2.10.mon6to9.")){
-#set up table
+  if(covname=="Bakun.UPW.mon6to9.") covtit = "$V_t$ = Ave. Jun-Sep Bakun-UPW (L2)"
   if(covname=="SST.UPW.4.mon6to9.") covtit = "$V_t$ = Ave. Jun-Sep UPW (L2)"
   if(covname=="SST.2.10.mon6to9.") covtit = "$V_t$ = Ave. Jun-Sep SST (L2)"
- 
+  if(covname=="SST.2.10.3.yr.runsum.") covtit = "$V_t$ = 3-year average SST (A1)"
+  if(covname=="ONI.mon1to12.") covtit = "$V_t$ = ONI (A2)"
+
 #var header
 seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
 
@@ -446,15 +337,15 @@ dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
 m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m4 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
-m5 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6) + s(cov1, sp=0.6), data=dat)
-a=anova(m1,m2,m3,m4,m5, test="F")
+a=anova(m1,m2,m3, test="F")
 
 #model 2
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
+addarrow <- ""
+if(AIC(get(mod))<82) addarrow <- "$\\Rightarrow$"
 tmp1=data.frame(
-  Model="2a. $ln(N_t)$ = M + $\\beta V_t$",
+  Model=paste(addarrow,"2a. $ln(N_t)$ = M + $\\beta V_t$"),
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
@@ -474,30 +365,8 @@ tmp1=data.frame(
   AIC = round(AIC(get(mod)), digits=2))
 seltable=rbind(seltable,tmp1)
 
-#model 4
-i=4; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="4a. $ln(N_t)$ = M + $s(V_t)$ + $\\beta V_{t-1}$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1),
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
-  Adj.R2=100*round(aa$r.sq, digits=3),
-  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
-  AIC = round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
-#model 5
-i=5; mod=paste("m",i,sep="")
-aa = summary(get(mod))
-tmp1=data.frame(
-  Model="5a. $ln(N_t)$ = M + $s(V_t)$ + $s(V_{t-1})$",
-  Residual.df=round(a[["Resid. Df"]][i],digits=1),
-  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3),
-  Adj.R2=100*round(aa$r.sq, digits=3),
-  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3),
-  AIC = round(AIC(get(mod)), digits=2))
-seltable=rbind(seltable,tmp1)
-
+dat$cov0=dat[[paste(covname, "0", sep="")]]
+dat$cov1=dat[[paste(covname, "1", sep="")]]
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov1, data=dat)
 m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
@@ -533,14 +402,194 @@ tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em
 seltable=rbind(seltable,tmp1)
 }
 
+# Remove space at top and bottom
 seltable=seltable[1:(dim(seltable)[1]-1),]
 ```
 
-```{r print-tableappBM2-upw, echo=FALSE}
+```{r print-tableAppB-sst-nspawnerM2, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
 if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
 
-thecap=paste("Model selection tests of upwelling intensity off Cochi as the explanatory variable.  See Table", ref("tabappB:nspawner-model-precipM2", pre="B"), "for an explanation of the models. Two upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore (box 13) minus nearshore (box 4) SST, and the average nearshore SST along the Kerala coast (boxes 2-5). These are highly correlated but not identical.")
-fullcap=paste("Table ", ref("tabappB:nspawner-model-upwM2", pre="B"), ". ", thecap, sep="")
+thecap=paste0("Model selection tests of sea surface temperature off the Kerala coast (up to 80km offshore in boxes 2-5 in Figure 1), and upwelling indices as the explanatory variables ($V$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data and base model without $S_{t-2}$.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. Three upwelling indices were tested. The nearshore-offshore temperature diferential (UPW), which is the offshore minus nearshore SST, the average nearshore SST along the Kerala coast (boxes 2-5), and the Bakun upwelling index based on wind stress. See Table ", ref("tabappB:nspawner-model-precip", pre="B"), " for an explanation of the models.")
+fullcap=paste("Table ", ref("tabappB:nspawner-model-sstM2", pre="B"), ". ", thecap, sep="")
 kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+```{r table-appB-nspawner-ensoM2, echo=FALSE}
+########### SST TEST 
+#set up table
+seltable = data.frame(
+  Model=paste("base model (M) ", Yr1,"-", Yr2, " data", sep=""), 
+  Residual.df="", 
+  MASE="",
+  Adj.R2="", 
+  F="", 
+  p.value="", 
+  AIC="", stringsAsFactors=FALSE)
+
+#set up the cov0 and cov1 variables
+covname="precip.gpcp.kerala.mon6to7."
+dat$cov0=dat[[paste(covname, "0", sep="")]]
+dat$cov1=dat[[paste(covname, "1", sep="")]]
+m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
+m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
+m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
+a=anova(m1,m2,m3, test="F")
+
+# header M1 for all models
+
+#model 1
+i=1; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="1. $ln(N_t)$ = $\\alpha$ + $s(ln(N_{t-1}))$ + $\\epsilon_t$",
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F="", p.value="", 
+  AIC=round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+## Add space
+tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
+seltable=rbind(seltable,tmp1)
+
+for(covname in c("SST.2.10.3.yr.runsum.")){
+#set up table
+  if(covname=="SST.2.10.3.yr.runsum.") covtit = "$V_t$ = 2.5-year average SST (A1)"
+
+#var header
+seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
+
+dat$cov0=dat[[paste(covname, "0", sep="")]]
+dat$cov1=dat[[paste(covname, "1", sep="")]]
+m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
+m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
+m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
+a=anova(m1,m2,m3, test="F")
+
+#model 2
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="2. $ln(N_t)$ = M + $\\beta V_t$",
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#model 3
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="$\\Rightarrow$ 3. $ln(N_t)$ = M + $s(V_t)$",
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+## Add space
+tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
+seltable=rbind(seltable,tmp1)
+}
+
+for(covname in c("ONI.mon1to12.", "DMI.mon9to11.")){
+#set up table
+  if(covname=="ONI.mon1to12.") covtit = "$V_t$ = ONI (A2)"
+  if(covname=="DMI.mon9to11.") covtit = "$V_t$ = DMI (A3)"
+
+#var header
+seltable = rbind(seltable, data.frame(Model=covtit, Residual.df="", MASE="", Adj.R2="", F="", p.value="", AIC="", stringsAsFactors=FALSE))
+
+dat$cov0=dat[[paste(covname, "0", sep="")]]
+dat$cov1=dat[[paste(covname, "1", sep="")]]
+m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
+m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov0, data=dat)
+m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
+a=anova(m1,m2,m3, test="F")
+
+#model 4
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="2a. $ln(N_t)$ = M + $\\beta V_{t}$",
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#model 5
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="3a. $ln(N_t)$ = M + $s(V_{t})$",
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6), data=dat)
+m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + cov1, data=dat)
+m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
+a=anova(m1,m2,m3, test="F")
+
+#model 4
+i=2; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+tmp1=data.frame(
+  Model="2b. $ln(N_t)$ = M + $\\beta V_{t-1}$",
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+#model 5
+i=3; mod=paste("m",i,sep="")
+aa = summary(get(mod))
+addarrow <- ""
+if(AIC(get(mod))<73) addarrow <- "$\\Rightarrow$"
+tmp1=data.frame(
+  Model=paste(addarrow, "3b. $ln(N_t)$ = M + $s(V_{t-1})$"),
+  Residual.df=round(a[["Resid. Df"]][i],digits=1), 
+  MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
+  Adj.R2=100*round(aa$r.sq, digits=3), 
+  F=round(a$F[i],digits=2), p.value = round(a[["Pr(>F)"]][i], digits=3), 
+  AIC = round(AIC(get(mod)), digits=2))
+seltable=rbind(seltable,tmp1)
+
+
+## Add space
+tmp1 = data.frame(Model="\\kern 1em", Residual.df="\\kern 1em", MASE="\\kern 1em", Adj.R2="\\kern 1em", F="\\kern 1em", p.value="\\kern 1em", AIC="")
+seltable=rbind(seltable,tmp1)
+}
+
+# Remove space at top and bottom
+seltable=seltable[1:(dim(seltable)[1]-1),]
+```
+
+```{r print-tableAppB-enso-nspawnerM2, echo=FALSE}
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC")
+
+thecap=paste0("Model selection tests of the multi-year average nearshore sea surface temperature and ENSO indices as the explanatory variables ($V$) for the catch during post-monsoon months (Oct-May) using ", Yr1," to ", Yr2, " data and base model without $S_{t-2}$.  The hypothesis tested (Table ", ref("tab:hypotheses"), ") is noted in parentheses. The ENSO indices were the ONI index averaged over all months in the calendar year and the DMI index for Sep-Nov. The 2.5-year average SST is the average for Jan-Jun in the current calendar year and the prior 2 calendar years (30 months total). Thus the average does not include any months during the Oct-Mar catch.  See Table ", ref("tabappB:nspawner-model-precip", pre="B"), " for an explanation of the models.")
+fullcap=paste("Table ", ref("tabappB:nspawner-model-ensoM2", pre="B"), ". ", thecap, sep="")
+kable(seltable, align="lcccccc", caption=fullcap, row.names=FALSE, escape=FALSE)
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
 ```
